--- a/graphs/PyramidalLayer5/README
+++ b/graphs/PyramidalLayer5/README
@@ -6,4 +6,7 @@
 5. copy the spines folder to the main folder
 6. move the neurons.txt file (inside spines folder) to the main folder
 7. configure the GSL (stimulus, I/O, params)
+ 7.1. update 'morph' 
+ 7.2. configure other parameters
 8. run the simulation 
+9. analyze the data
